# FfeD-QLC-MVP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER  Dockerfile  LICENSE  NOTICE  README.md  SAFETY.md  SCHOOL_TOOL_GOVERNANCE.md  SECURITY.md  compose.yaml  mkdocs.yml  pyproject.toml
.antigravity/: marketplace.json  securedme-adapter-map.json  webauth-template.json
.codex/: marketplace.json  securedme-adapter-map.json  webauth-template.json
.github/workflows/: ci-datadog.yml
docs/: bouncy-castle-perimeter.md  datadog-ci-telemetry.md  design-asset-intake.md  docker-base-map.md  e2b-datadog-sponsor-demo.md  e2b-microvm-qlc-architecture.md  fnpqnn-gateway-mesh-proof.md  index.md  investor-brief.md  official-badges-and-evidence.md  privacy-safe-audit-orb.md  public-scope.md  qlc-contract-fixtures.md  qlc-structural-transform.md  yolo-secret-redaction.md
scripts/: e2b_run_mvp.py  qlc_final_wiring_smoke.py  qlc_wiring_pass_2_smoke.py
short term memory FfeD-QLC-MVP/: AGENTS.md  dorsal_pocket.md
tests/: test_admissibility.py  test_audit_orb.py  test_bc_perimeter.py  test_chunk_protection_plan.py  test_cli_qlc.py  test_context_guard.py  test_docker_map.py  test_ecn_handoff.py  test_key_schedule.py  test_mascotte_manifest.py  test_mesh_proof.py  test_proof_bundle.py  test_protected_intake.py  test_quarantine_capsule.py  test_route_decision.py  test_semantic_policy.py  test_structural_transform.py  test_swop_policy.py  test_utility_scorecard.py  test_workflow.py  test_workflow_inspector.py
(+32 files in other folders)
