[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ffed-qlc-mvp"
version = "0.1.0"
description = "Public MVP for a bounded FfeD-QLC admissibility layer and Docker/CPAI study-case map."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SeCuReDmE-main-dev" }
]
dependencies = ["cryptography>=42.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
e2b = ["e2b>=1.0.0"]

[project.scripts]
ffed-qlc = "ffed_qlc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
